--- a/bt_site/cadastro/style.css
+++ b/bt_site/cadastro/style.css
@@ -96,7 +96,6 @@ body {
     border: none;
     font-size: 1.2rem;
     font-family: 'Montserrat';
-    /* background-color: #ff914d;*/
 }
 
 .input_forms label {
@@ -119,15 +118,7 @@ body {
     border: 1px solid #e1e1e1;
     font-size: 1.2rem;
     font-family: 'Montserrat';
-    margin: 5px 0px 0 0px;
-    /* background-color: #f0eded;*/
-}
-
-.cont_medicos .lista,
-.cont_planos .lista,
-.cont_esp .lista {
-    margin: 0;
-    border: none;
+    margin: 10px 0px 0px 0px;
 }
 
 .cont_medicos .input,
@@ -155,6 +146,12 @@ body {
     color: #ff914d;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0; /* <-- Aparentemente, algumas margens ainda estão lá, apesar de estar ocultas */
+}
+
 option:hover {
     color: #ff914d;
 }
@@ -179,6 +176,11 @@ option:hover {
 }
 
 .botao button {
+    color: white;
+    text-decoration: none;
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 1.8rem;
     border: none;
     background-color: #ef894e;
     border-radius: 5px;
@@ -190,14 +192,6 @@ option:hover {
 
 .botao button:hover {
     background-color: #1e2759;
-}
-
-.botao button a {
-    color: white;
-    text-decoration: none;
-    font-family: 'Montserrat';
-    font-weight: 400;
-    font-size: 1.8rem;
 }
 
 /*-------------------Com interferencia do javascript------------------------------*/
